--- a/_config.yml
+++ b/_config.yml
@@ -30,6 +30,10 @@ twitter_username: jekyllrb
 github_username: jekyll
 avatar: logo.png
 favicon: logo.png
+header_text: Here to change the rules
+footer_text: BeLeopard, 2022
+header_feature_image: logo.png
+header_feature_image_responsive: true
 
 # Build settings
 theme: type-on-strap
