Change remote theme

--- a/_config.yml
+++ b/_config.yml
@@ -37,6 +37,7 @@ header_feature_image_responsive: true
 
 # Build settings
 theme: type-on-strap
+remote_theme: sylhare/Type-on-Strap
 plugins:
   - jekyll-feed
 # Exclude from processing.
