--- a/_config.yml
+++ b/_config.yml
@@ -37,6 +37,7 @@ header_feature_image_responsive: true
 
 # Build settings
 remote_theme: sylhare/Type-on-Strap
+theme: type-on-strap
 plugins:
   - jekyll-feed
 # Exclude from processing.
@@ -47,10 +48,10 @@ plugins:
 # Excluded items can be processed by explicitly listing the directories or
 # their entries' file path in the `include:` list.
 #
-# collections:
-#   portfolio:
-#     output: true
-#     permalink: /:collection/:name
+collections:
+  portfolio:
+    output: true
+    permalink: /:collection/:name
 # exclude:
 #   - .sass-cache/
 #   - .jekyll-cache/
