--- a/_config.yml
+++ b/_config.yml
@@ -32,7 +32,7 @@ avatar: logo.png
 favicon: logo.png
 header_text: Here to change the rules
 footer_text: BeLeopard, 2022
-header_feature_image: leopard.jpg
+header_feature_image: assets/img/feature/feature_home.png
 header_feature_image_responsive: true
 
 # Build settings
