--- a/_data/icons.yml
+++ b/_data/icons.yml
@@ -12,7 +12,7 @@ google-scholar: # e.g. "WXAAOb0AAAAJ"
 instagram:
 hacker-news:
 keybase:
-linkedin: https://www.linkedin.com/in/stefano-zambrini-7601386b/
+linkedin: # https://www.linkedin.com/in/stefano-zambrini-7601386b/
 mail: # e.g. "sam@mail.com"
 map: # e.g. "34.0886/-118.3191"
 mastodon: # e.g. "fostodon.org/@sam"
@@ -30,7 +30,7 @@ steam:
 telegram:
 tumblr:
 twitch:
-twitter: https://twitter.com/SteZambrini
+twitter: # https://twitter.com/SteZambrini
 vimeo:
 vk:
 wordpress:
