--- a/_config.yml
+++ b/_config.yml
@@ -40,8 +40,8 @@ paginate: 5
 google_analytics: G-3EX71S8ZC3
 
 # Build settings
-# remote_theme: sylhare/Type-on-Strap
-theme: type-on-strap
+remote_theme: sylhare/Type-on-Strap
+# theme: type-on-strap
 plugins:
   - jekyll-feed
 # Exclude from processing.
